# Github-Agent

./: .gitignore  README.md  pyproject.toml
github_agent/: agent.py
github_agent/functions/: __init__.py  main.py
github_agent/schemas/: __init__.py  main.py
github_agent/system_prompts/: __init__.py  main.py
github_agent/tools/: __init__.py  main.py
